# uh-mfc

./: README.md
haskelltalk/: README.md  SuperDirt.scd  abstract  atom-amd64.deb.REMOVED.git-id  dependency_management  dotemacs  ghciscript  haskelltalk.cabal  haskelltalk.cabalbackup  haskelltalkoutline  install  install_linux_deb  install_linux_rpm  install_supercollider  references  simple.tex  stack.yaml  tikz.tex
haskelltalk/app/: AD.lhs  Accelerate.hs  CSound.hs  Category.hs  Chart2.hs  DependentTypes.hs  Dimensional.hs  GnuPlot.hs  HaTeX.hs  HigherOrder.hs  LazyEvaluation.hs  Main  Mandelbrot.lhs  MatPlotLib.hs  MutableState.hs  NumberTheory.hs  Pentaflake.lhs  Plot1.hs  Plot2.hs  Plot3.hs  Plot4.hs  Profiling.hs  Quasifuchsian.lhs  Satisfiability.hs  SizeIndexedVectors.hs  SquareLimit.lhs  Testing.hs  Tidal.hs  Types.hs  Units1.hs  Units2.hs  Weierstrass.hs  chart  cleanup  diagrams  test.tidal
haskelltalk/app/CSound/: Color.hs  DubBass.hs  Gm.hs  Tibetan.hs  Wind.hs
haskelltalk/app/Chart/: Chart1.hs  Chart2.hs  Chart3.hs  Chart4.hs  chart
haskelltalk/app/Diagrams/: Mandelbrot.lhs  Pentaflake.lhs  Quasifuchsian.lhs  Squarelimit.lhs  diagrams
haskelltalk/app/Plot/: Plot1.hs  Plot2.hs  Plot3.hs  Plot4.hs
haskelltalk/app/Tidal/: .#functions.tidal  Tidal.hs  pattern002.tidal  pattern006.tidal  pattern020.tidal
