name:                haskelltalk
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskelltalk#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskelltalk-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Basics, HigherOrder, LazyEvaluation, Records, Types, Category, MutableState, Testing, LambdaCalculus, DependentTypes,
                       Chart.Chart1, Chart.Chart2, Chart.Chart3, Chart.Chart4,
                       Plot.Plot1, Plot.Plot2, Plot.Plot3, Plot.Plot4,
                       --Use diagrams script in app/Diagrams
                       --Diagrams.Mandelbrot, Diagrams.Pentaflake, Diagrams.Quasifuchsian, Diagrams.SquareLimit,
                       GnuPlot,
                       Dimensional, Units1, Units2,
                       AD,
                       Weierstrass,
                       HaTeX,
                       Satisfiability,
                       SizeIndexedVectors,
                       NumberTheory,
                       Accelerate
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
-- Note: if you want to install Agda and/or Idris, I recommend doing a 'stack build' first,
-- then uncomment the first line and do 'stack build', then uncomment the other line and do 'stack build'.
-- This is because Agda and Idris require almost 4GB of memory each while compiling...
                     --, Agda
                     --, idris
                     --, hlint
                     --, hoogle
                     , transformers, mtl
                     --, extensible-effects
                     , lens
                     , tidal
                     , csound-expression, random
                     , ad, simple-reflect
                     --, parsec
                     , diagrams, diagrams-lib, diagrams-svg, diagrams-gtk, colour, array
                     , Chart, Chart-cairo, Chart-gtk
                     , plot, plot-gtk3
                     -- The next line is needed for plot
                     , hmatrix, hmatrix-gsl-stats, gtk, cairo, pango
                     , gnuplot, time, filepath
                     , dimensional, units, units-defs
                     --, djinn-lib
                     , HaTeX, matrix
                     --, hamilton
                     --, H , inline-r
                     --, intervals
                     --, kan-extensions
                     --, matplotlib
                     -- The next two lines are needed for Matplotlib
                     --, random, raw-strings-qq, temporary, bytestring, process, split
                     --, tasty, tasty-expected-failure, tasty-hunit, tasty-golden
                     , stm
                     --, morte
                     --, recursion-schemes
                     --, Rasterific
                     --, search-algorithms
                     --, shelly
                     --, tf-random
                     --, threepenny-gui
                     --, turtle
                     --, typed-processes
                     --, unordered-containers
                     --, vectors
                     , accelerate, accelerate-examples
                     , accelerate-llvm-native
                     --, accelerate-llvm-ptx
                     , sbv, picosat, picologic
                     , arithmoi
                     --, repa
                     --, yesod
                     --, criterion
                     --, weigh
                     , haskelltalk
  default-language:    Haskell2010

test-suite haskelltalk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , haskelltalk
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -XOverloadedStrings
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskelltalk
